# todos

./: .gitignore  README.md  alembic.ini  docker-compose.yaml  makefile  pyproject.toml
alembic/: env.py
alembic/versions/: 9824d43c0d7a_added_user_table.py
src/: main.py
src/core/: postgres.py  settings.py
src/user/: entities.py  models.py  routes.py
tests/: test_fastapi_app.py
